add info for naver, google seraching

--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="en">
 
 <head>
+  <title>스마트 줄서기 | Smart Lineup</title>
   <meta charset="UTF-8" />
+  <meta name="description" content="스마트하게 줄서는 방법! 식당, 병원 대기 서비스를 한눈에.">
+  <meta name="keywords" content="줄서기, 식당 대기, 병원 대기, 스마트 대기, smart lineup, lineup, 대기열 관리, 대기">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="ko">
+  
+  <!-- Open Graph (SNS 공유용, 선택사항) -->
+  <meta property="og:title" content="스마트 줄서기">
+  <meta property="og:description" content="식당, 병원 줄서기 대기를 스마트하게!">
+  <meta property="og:url" content="https://smart-lineup.com">
+  <meta property="og:image" content="https://smart-lineup.com/og-image.png">
   <link rel="icon" type="png" href="./src/assets/images/lineup.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart Line up</title>
