--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta property="og:title" content="스마트 줄서기">
   <meta property="og:description" content="식당, 병원 줄서기 대기를 스마트하게!">
   <meta property="og:url" content="https://smart-lineup.com">
-  <meta property="og:image" content="https://smart-lineup.com/og-image.png">
-  <link rel="icon" type="png" href="./src/assets/images/lineup.png" />
+  <meta property="og:image" content="https://smart-lineup.com/logo.png">
+  <link rel="icon" type="png" href="./src/assets/images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Smart Line up</title>
 
