--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta property="og:image" content="https://smart-lineup.com/logo.png">
   <link rel="icon" type="png" href="./src/assets/images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="canonical" href="https://smart-lineup.com/" />
   <title>Smart Line up</title>
 
   <!-- Google tag (gtag.js) -->
